--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -4,6 +4,9 @@ body{
     font-family: 'Lato', sans-serif;
     font-size: 22px;
     color:  #FFF;
+    @media(max-width:1000px){
+        font-size: 16px;
+    }
 }
 
 .container{
@@ -21,6 +24,11 @@ body{
         display: flex;
         justify-content: space-between;
         padding: 30px 0;
+    }
+    @media(max-width:800px){
+        &{
+           display:none;
+        }
     }
 }
 .network-list{
@@ -114,6 +122,31 @@ body{
     &__btn{
         margin-top: 40px;
     }
+
+    @media(max-width:900px){
+        &{
+            &__inner{
+                max-width: 100%;
+            }
+            text-align: center;
+            &__title{
+                font-size: 60px;
+            }
+            &__suptitle, &__subtitle{
+                font-size: 20px;
+            }
+        }
+    }
+    @media(max-width:500px){
+        &{
+            &__title{
+                font-size: 50px;
+            }
+            &__suptitle, &__subtitle{
+                font-size: 20px;
+            }
+        }
+    }
 }
 
 .btn{
@@ -147,6 +180,13 @@ body{
         left: 50%;
         transform: translate(-50%, -50%);
     }
+
+    @media(max-width:900px){
+        &{
+            font-size: 16px;
+            padding: 15px 40px;
+        }
+    }
 }
 /* /INTRO */
 
@@ -171,18 +211,33 @@ body{
     &__btn{
         margin-top: 60px;
     }
+
+    @media (max-width:1100px){
+        &{
+            &__title{
+                font-size:28px;
+            }
+            &__description{
+                font-size: 16px;
+                margin-top: 32px;
+            }
+            
+        }
+    }
+
 }
 
 .cards{
     width: 100%;
     display: flex;
-    justify-content: center;
+    flex-wrap: wrap;
+    justify-content: space-between;
     margin-top: 50px;
     &__item{
         width: 350px;
         min-height: 580px;
         border-radius: 10px;
-        margin-right: 30px;
+        background-size: cover;
         &-sol{
             background-image: url(../img/image-2.jpg);
         }
@@ -235,6 +290,39 @@ body{
         max-width: 285px;
         font-size: 12px;
     }
+
+
+    @media (max-width:1100px){
+        &{
+            justify-content: space-evenly;
+            &__item{
+                width: 45%;
+                font-size:28px;
+                margin-bottom: 30px;
+            }
+        }
+    }
+    @media (max-width:700px){
+        &{
+            &__item{
+                margin-bottom: 15px;
+                width: 100%;
+                font-size:28px;
+                &:last-child{
+                    margin-top:0;
+                }
+            }
+            &__notation{
+                font-size: 16px;
+                max-width: 85%;
+            }
+            &__btn{
+                font-size: 25px;
+            }
+        }
+    }
+
+
 }
 
 /* /SECTION (price) */
@@ -252,13 +340,12 @@ body{
 }
 .tour{
     max-width: 531px;
-    padding-bottom: 30px;
+    padding: 75px 0 30px 0;
     &__wrapper{
         position: relative;
         padding-left: 184px;
     }
     &__title{
-        margin-top: 75px;
         text-transform: uppercase;
         font-size: 38px;
         font-weight: bold;
@@ -309,7 +396,31 @@ body{
             left: -44px;
         }
     }
-    
+    @media(max-width:1100px){
+        &{
+            padding-top: 20px;
+            &__title{
+                font-size: 28px;
+            }
+            &__title, &__description, &__route{
+                margin-top: 20px;
+            }
+        }
+    }
+    @media(max-width:500px){
+        &{
+            &__item{  
+                width: 100%;
+            }
+            &__wrapper{
+                padding-left: 150px;
+            }
+            &__date{
+                font-size: 25px;
+                top: 5px;
+            }
+        }
+    }
 }
 
 /* /SECTION (tour)*/
@@ -320,15 +431,42 @@ body{
     display: flex;
     flex-flow: row wrap;
     margin-top: 60px;
+    justify-content: space-evenly;
     &__item{
         overflow: hidden;
         cursor: pointer;
     }
     &__img{
         display: block;
+        width: 100%;
+        height: 100%;
         transition: .5s ease-in-out;
         &:hover{
             transform: scale(1.2);
+        }
+    }
+    
+    
+    @media(max-width:1150px){
+        &{
+            &__item{
+                margin-bottom: 3%;
+                width:45%;
+                &:last-child{
+                    margin-bottom: 0;
+                }
+            }
+
+
+        }
+    }
+
+    @media(max-width:500px){
+        &{
+            &__item{  
+                width: 100%;
+                margin-bottom: 15px;
+            }
         }
     }
 }
@@ -373,6 +511,31 @@ body{
         font-size: 18px;
         color: #424242;
     }
+
+    @media(max-width:1000px){
+        &{
+            &__description{
+                max-width: 90%;
+            }
+            &__title{
+                font-size: 20px;
+            }  
+            &__text{
+                font-size: 16px;
+            }
+            &__subtext{
+                font-size: 14px;
+            }
+           
+        }
+    }
+    @media(max-width:500px){
+        &{
+            &__description{
+                display: none;
+            }     
+        }
+    }
 }
 
 /* /Section (whereabout) */
@@ -398,6 +561,17 @@ body{
     &__network{
         align-self: center;
         font-size: 30px;
+    }
+
+    @media(max-width:500px){
+        &{
+            &__wrapper{  
+                display: block;
+            }
+            &__network{
+                margin-top: 15px;
+            }
+        }
     }
 }
 
