--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -300,14 +300,17 @@ body{
                 font-size:28px;
                 margin-bottom: 30px;
             }
+            &__title{
+                font-size: 20px;
+            }
         }
     }
+    
     @media (max-width:700px){
         &{
             &__item{
                 margin-bottom: 15px;
                 width: 100%;
-                font-size:28px;
                 &:last-child{
                     margin-top:0;
                 }
